Clean up whitespace related issues in entire project (#126)
* Removed trailing whitespace everywhere

* Cleaned up C# source files

Removed trailing whitespace, changed line endings from CRLF to LF and
removed the UTF-8 BOM

* Added a .gitattributes file

C# source files are now forced to have LF line endings

* EditorConfig rule to cover all text files

* Added more file types to .gitattributes

* Cleaned up OCAML source files

And also added them to .gitattributes and .editorconfig

* Added end_of_line = lf to .editorconfig

* Made .gitattributes way simpler

--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,10 @@
 root = true
 
-# This file
-[.editorconfig]
+# Base for all text files
+[*]
 trim_trailing_whitespace = true
 insert_final_newline = true
-
-# Pretty much everything should trim whitespace and have a final EOL
-[*.{c,clj,cpp,cs,css,elm,go,hs,html,jl,js,md,py,rs}]
-trim_trailing_whitespace = true
-insert_final_newline = true
+end_of_line = lf
 
 # C
 [*.c]
@@ -66,6 +62,11 @@ indent_size = 2
 
 # Markdown
 [*.md]
+indent_style = space
+indent_size = 2
+
+# OCAML
+[*.ml]
 indent_style = space
 indent_size = 2
 
