--- a/.editorconfig
+++ b/.editorconfig
@@ -50,6 +50,11 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+# Java
+[*.java]
+indent_style = space
+indent_size = 4
+
 # Julia
 [*.jl]
 indent_style = space
