--- a/.editorconfig
+++ b/.editorconfig
@@ -31,6 +31,11 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+# D
+[*.d]
+indent_style = space
+indent_size = 4
+
 # Elm
 [*.elm]
 indent_style = space
