--- a/.editorconfig
+++ b/.editorconfig
@@ -90,6 +90,11 @@ indent_size = 2
 indent_style = space
 indent_size = 4
 
+# Racket
+[*.rkt]
+indent_style = space
+indent_size = 2
+
 # Rust
 [*.rs]
 indent_style = space
