--- a/.editorconfig
+++ b/.editorconfig
@@ -70,6 +70,11 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+# Matlab
+[*.m]
+indent_style = space
+indent_size = 4
+
 # Markdown
 [*.md]
 indent_style = space
@@ -84,6 +89,11 @@ indent_size = 2
 [*.py]
 indent_style = space
 indent_size = 4
+
+# Racket
+[*.rkt]
+indent_style = space
+indent_size = 2
 
 # Rust
 [*.rs]
