--- a/.editorconfig
+++ b/.editorconfig
@@ -70,6 +70,11 @@ indent_size = 4
 indent_style = space
 indent_size = 2
 
+# JSON
+[*.json]
+indent_style = space
+indent_size = 2
+
 # Matlab
 [*.m]
 indent_style = space
