--- a/.travis.yml
+++ b/.travis.yml
@@ -5,9 +5,9 @@ language: node_js
 node_js:
   - "4"
 
-cache:
-  directories:
-    - node_modules
+# cache:
+#   directories:
+#     - node_modules
 
 install:
   - npm install gitbook-cli -g
