Whitespace: added Euclidian algorithm

--- a/.editorconfig
+++ b/.editorconfig
@@ -109,3 +109,11 @@ indent_size = 2
 [*.rs]
 indent_style = space
 indent_size = 4
+
+# Whitespace
+[*.ws]
+indent_style = space
+indent_size = 0
+trim_trailing_whitespace = false
+insert_final_newline = false
+end_of_line = lf
