--- a/.gitignore
+++ b/.gitignore
@@ -498,3 +498,11 @@ __pycache__/
 
 -# Other
 -*.xcf
+
+# Cache files for sublime text
+*.sublime-workspace
+*.sublime-project
+
+# Settings directory for visual studio code
+vscode/
+
