--- a/.editorconfig
+++ b/.editorconfig
@@ -110,6 +110,14 @@ indent_size = 2
 indent_style = space
 indent_size = 4
 
+# Whitespace
+[*.ws]
+indent_style = space
+indent_size = 0
+trim_trailing_whitespace = false
+insert_final_newline = false
+end_of_line = lf
+
 # Emojicode
 [*.emojic]
 indent_style = space
