add lolcode to the editor config

--- a/.editorconfig
+++ b/.editorconfig
@@ -80,6 +80,11 @@ indent_size = 2
 indent_style = space
 indent_size = 2
 
+# LOLCODE
+[*.lol]
+indent_style = space
+indent_size = 4
+
 # Matlab
 [*.m]
 indent_style = space
