Add Euclidean GCD in Factor (#425)
* Factor Euclidean GCD

* added .editorconfig changes

* update file to follow new editorconfig

* vim, stop adding tabs, kthxbye

* added absolute values

--- a/.editorconfig
+++ b/.editorconfig
@@ -133,6 +133,11 @@ indent_size = 2
 indent_style = space
 indent_size = 4
 
+# Factor
+[*.factor]
+intent_style = space
+indent_size = 2
+
 #Lua
 [*.lua]
 indent_style = space
