--- a/.editorconfig
+++ b/.editorconfig
@@ -145,6 +145,11 @@ indent_size = 2
 indent_style = space
 indent_size = 4
 
+# Scratch (text code)
+[contents/*/code/scratch/*.txt]
+indent_style = space
+indent_size = 4
+
 # Whitespace
 [*.ws]
 indent_style = space
