add vlang and bubblesort in v

--- a/.editorconfig
+++ b/.editorconfig
@@ -150,6 +150,11 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
+# V
+[*.v]
+indent_style = space
+indent_size = 4
+
 # Whitespace
 [*.ws]
 indent_style = space
