--- a/.editorconfig
+++ b/.editorconfig
@@ -157,3 +157,9 @@ indent_size = 0
 trim_trailing_whitespace = false
 insert_final_newline = false
 end_of_line = lf
+
+
+# PowerShell
+[*.ps1]
+indent_style = space
+indent_size = 4
