Add Euclidean Algorithm in PowerShell (#626)
* added PowerShell language

* added Euclidean Algorithm in PowerShell

* Corrected indentation in book.json

* Added PowerShell to .editorconfig

* added more meaningful outputs

--- a/.editorconfig
+++ b/.editorconfig
@@ -162,7 +162,13 @@ trim_trailing_whitespace = false
 insert_final_newline = false
 end_of_line = lf
 
+# PowerShell
+[*.ps1]
+indent_style = space
+indent_size = 4
+
 # CoffeeScript
 [*.coffee]
 indent_style = space
 indent_size = 2
+
