Fix issue with plugins
This effectively turns the whole repo into a Node package, so tools like
`npm` and `yarn` can automate tasks such as dependency installation.
Please note that non-standard plugins are listed in both `book.json` and
`package.json`.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,14 +6,14 @@ node_js:
   - "12"
 
 install:
-  - npm install honkit -g
+  - npm install
 
 before_script:
   - mkdir -p "${TRAVIS_BUILD_DIR}"/build
 
 script:
   - env | sort
-  - honkit build . "${TRAVIS_BUILD_DIR}"/build
+  - npm build . "${TRAVIS_BUILD_DIR}"/build
 
 after_success:
     - |
