--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ before_script:
   - mkdir -p "${TRAVIS_BUILD_DIR}"/build
 
 script:
-  - npm install
-  - npm build . "${TRAVIS_BUILD_DIR}"/build
+  - npm build . ${TRAVIS_BUILD_DIR}/build
 
 after_success:
     - |
