--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_script:
 
       if [[ -z "${TRAVIS_COMMIT_RANGE}" ]]
       then
-          # This is a new branch.
+          : # This is a new branch.
       else
           # This isn't a new branch.
           if [[ "${TRAVIS_PULL_REQUEST}" = "false" ]]
@@ -25,7 +25,7 @@ before_script:
 
               if [[ "$(git cat-file -t ${COMMIT1} 2>/dev/null)" = commit -a "$(git cat-file -t ${COMMIT2} 2>/dev/null)" = commit ]]
               then
-                  # This was a history rewrite.
+                  : # This was a history rewrite.
               else
                   # This is a 'normal' build.
                   CHANGED_FILES="$(git diff --name-only ${COMMIT_RANGE} --)"
