Fix HonKit build commands and location of book build dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,22 +6,10 @@ node_js:
   - "12"
 
 before_script:
-  - mkdir -p "${TRAVIS_BUILD_DIR}"/build
-  - CHANGED_FILES=$(git diff --name-only HEAD~1...HEAD .)
-  - |
-      if echo $CHANGED_FILES | grep "package.json"
-      then
-        cp package.json "${TRAVIS_BUILD_DIR}"/build
-      fi
+  - BOOK_BUILD_DIR="${TRAVIS_BUILD_DIR}"/_book
 
 script:
-  - |
-      if echo $CHANGED_FILES | grep "package.json"
-      then
-        npm build --reload . ${TRAVIS_BUILD_DIR}/build
-      else
-        npm build . ${TRAVIS_BUILD_DIR}/build
-      fi
+  - npm run build
 
 after_success:
     - |
