--- a/.travis.yml
+++ b/.travis.yml
@@ -6,10 +6,18 @@ node_js:
   - "12"
 
 before_script:
-  - BOOK_BUILD_DIR="${TRAVIS_BUILD_DIR}"/_book
+  - export BOOK_BUILD_DIR="${TRAVIS_BUILD_DIR}"/_book
+  - env | sort
 
 script:
   - npm run build
+  # Make sure the book built.
+  - |
+      book_check_file="${BOOK_BUILD_DIR}/index.html"
+      if [[ ! -f  "${book_check_file}" ]]; then
+          echo "${book_check_file} not found"
+          exit 1
+      fi
 
 after_success:
     - |
