--- a/.editorconfig
+++ b/.editorconfig
@@ -135,8 +135,8 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
-# Racket
-[*.rkt]
+# Racket/Scheme
+[*.{rkt,ss,scm}]
 indent_style = space
 indent_size = 2
 
