--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   ],
   "dependencies": {
     "gitbook-plugin-api-language-selector": "git+https://github.com/algorithm-archivists/gitbook-plugin-api-language-selector.git",
-    "gitbook-plugin-bibtex-cite": "^1.1.0",
+    "gitbook-plugin-bibtex-cite": "git+https://github.com/algorithm-archivists/gitbook-plugin-bibtex-cite.git",
     "gitbook-plugin-bulk-redirect": "^0.2.1",
     "gitbook-plugin-ga": "^2.0.0",
     "gitbook-plugin-include-codeblock": "^3.2.2",
