fix: use npx over npm i -g

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,5 @@ jobs:
 
       - name: Install and build
         run: |
-          npm install -g honkit
           npm install
-          npm run honkit build
+          npx honkit build
