--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,8 @@ jobs:
 
       - name: Install and build
         run: |
-          npm install -g honkit
           npm install
-          npm run honkit build
+          npx honkit build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.4
