--- a/.github/workflows/issue_comment.yml
+++ b/.github/workflows/issue_comment.yml
@@ -14,6 +14,8 @@ jobs:
           text: ${{ github.event.comment.body }}
           regex: '^/\[lang:\s*(.*?)\s*\]$'
 
+      - run: echo  ${{ steps.regex-match.outputs }}
+
       - uses: actions-ecosystem/action-add-labels@v1
         if: ${{ steps.regex-match.outputs.match != '' }}
         with:
