updating approximate_counting.py

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gitbook-plugin-mathjax": "git+https://github.com/algorithm-archivists/plugin-mathjax.git",
     "gitbook-plugin-prism": "^2.4.0",
     "gitbook-plugin-wordcount": "^0.0.1",
-    "honkit": "^3.6.16"
+    "honkit": "^3.6.16",
+    "package.json": "^2.0.1"
   },
   "repository": {
     "type": "git",
