First fully functional version of the build system for C code

--- a/contents/computus/code/c/SConscript
+++ b/contents/computus/code/c/SConscript
@@ -1,3 +1,2 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/computus/gauss_easter', 'gauss_easter.c')
+env.C('#/build/c/computus/gauss_easter', 'gauss_easter.c')
