--- a/contents/verlet_integration/code/c/SConscript
+++ b/contents/verlet_integration/code/c/SConscript
@@ -1,3 +1,2 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/verlet_integration/verlet', 'verlet.c')
+env.C('#/build/c/verlet_integration/verlet', 'verlet.c')
