--- a/contents/cooley_tukey/code/c/SConscript
+++ b/contents/cooley_tukey/code/c/SConscript
@@ -1,4 +1,3 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/cooley_tukey/cooley_tukey', 'fft.c',
-                     LDFLAGS='-lfftw3')
+env.C('#/build/c/cooley_tukey/cooley_tukey', 'fft.c',
+                     LIBS=['-lm', '-lfftw3'])
