--- a/contents/flood_fill/code/c/SConscript
+++ b/contents/flood_fill/code/c/SConscript
@@ -1,3 +1,2 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/flood_fill/flood_fill', 'flood_fill.c')
+env.C('#/build/c/flood_fill/flood_fill', 'flood_fill.c')
