--- a/contents/split-operator_method/code/c/SConscript
+++ b/contents/split-operator_method/code/c/SConscript
@@ -1,3 +1,3 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/split-op_method/split_op', 'split_op.c')
+env.C('#/build/c/split-op_method/split_op', 'split_op.c',
+      LIBS=['-lm', '-lfftw3'])
