--- a/contents/stable_marriage_problem/code/c/SConscript
+++ b/contents/stable_marriage_problem/code/c/SConscript
@@ -1,3 +1,2 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/stable_marriage/stable_marriage', 'stable_marriage.c')
+env.C('#/build/c/stable_marriage/stable_marriage', 'stable_marriage.c')
