--- a/contents/thomas_algorithm/code/c/SConscript
+++ b/contents/thomas_algorithm/code/c/SConscript
@@ -1,3 +1,2 @@
 Import('*')
-
-env.C(f'{root_dir}/build/c/thomas_algorithm/thomas', 'thomas.c')
+env.C('#/build/c/thomas_algorithm/thomas', 'thomas.c')
