Simplified SConscript files
SConscript files are now mostly universal for C programs.
Additionally, the build hierarchy is now flattened (executables under the language folder)

--- a/contents/quantum_systems/code/c/SConscript
+++ b/contents/quantum_systems/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/quantum_systems/energy', 'energy.c', LIBS=['-lm', '-lfftw3'])
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'), LIBS=['m', 'fftw3'])
