--- a/contents/computus/code/c/SConscript
+++ b/contents/computus/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/computus/gauss_easter', 'gauss_easter.c')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
