--- a/contents/cooley_tukey/code/c/SConscript
+++ b/contents/cooley_tukey/code/c/SConscript
@@ -1,3 +1,6 @@
 Import('*')
-env.C('#/build/c/cooley_tukey/cooley_tukey', 'fft.c',
-                     LIBS=['-lm', '-lfftw3'])
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'), LIBS=['m', 'fftw3'])
