--- a/contents/euclidean_algorithm/code/c/SConscript
+++ b/contents/euclidean_algorithm/code/c/SConscript
@@ -1,3 +1,6 @@
 Import('*')
-env.C('#/build/c/euclidean_algorithm/euclidean_algorithm',
-      'euclidean_example.c', LIBS='-lm')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
