--- a/contents/flood_fill/code/c/SConscript
+++ b/contents/flood_fill/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/flood_fill/flood_fill', 'flood_fill.c')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
