--- a/contents/forward_euler_method/code/c/SConscript
+++ b/contents/forward_euler_method/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/forward_euler_method/forward_euler', 'euler.c', LIBS='-lm')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'), LIBS='m')
