--- a/contents/gaussian_elimination/code/c/SConscript
+++ b/contents/gaussian_elimination/code/c/SConscript
@@ -1,4 +1,6 @@
 Import('*')
-env.C('#/build/c/gaussian_elimination/gaussian_elimination',
-      'gaussian_elimination.c')
+from pathlib import Path
 
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
