--- a/contents/graham_scan/code/c/SConscript
+++ b/contents/graham_scan/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/graham_scan/graham_scan', 'graham.c', LIBS='-lm')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'), LIBS='m')
