--- a/contents/monte_carlo_integration/code/c/SConscript
+++ b/contents/monte_carlo_integration/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/monte_carlo_integration/monte_carlo', 'monte_carlo.c')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
