--- a/contents/split-operator_method/code/c/SConscript
+++ b/contents/split-operator_method/code/c/SConscript
@@ -1,3 +1,6 @@
 Import('*')
-env.C('#/build/c/split-op_method/split_op', 'split_op.c',
-      LIBS=['-lm', '-lfftw3'])
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'), LIBS=['m', 'fftw3'])
