--- a/contents/stable_marriage_problem/code/c/SConscript
+++ b/contents/stable_marriage_problem/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/stable_marriage/stable_marriage', 'stable_marriage.c')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
