--- a/contents/thomas_algorithm/code/c/SConscript
+++ b/contents/thomas_algorithm/code/c/SConscript
@@ -1,2 +1,6 @@
 Import('*')
-env.C('#/build/c/thomas_algorithm/thomas', 'thomas.c')
+from pathlib import Path
+
+dirname = Path.cwd().parents[1].stem
+
+env.C(f'#/build/c/{dirname}', Glob('*.c'))
