Revert "Merge master"
This reverts commit 84210b0619d6fa037e030c0bef8c0fed59e1145b.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -6,7 +6,7 @@ FROM mcr.microsoft.com/vscode/devcontainers/base:0-${VARIANT}
 
 # [Optional] Uncomment this section to install additional OS packages.
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends build-essential software-properties-common xz-utils g++ sbcl julia python3 python3-pip python3-dev ghc openjdk-11-jdk rustc libssl-dev gfortran libxml2-dev libyaml-dev libgmp-dev libz-dev libncurses5 gnuplot nodejs npm lua5.3 ocaml php ruby-full gnu-smalltalk scratch libfftw3-dev
+    && apt-get -y install --no-install-recommends build-essential software-properties-common xz-utils g++ sbcl julia python3 python3-pip python3-dev ghc openjdk-11-jdk rustc libssl-dev gfortran libxml2-dev libyaml-dev libgmp-dev libz-dev libncurses5 gnuplot nodejs npm lua5.3 ocaml php ruby-full gnu-smalltalk scratch
 
 # Setup Crystal
 RUN echo 'deb http://download.opensuse.org/repositories/devel:/languages:/crystal/xUbuntu_20.04/ /' | sudo tee /etc/apt/sources.list.d/devel:languages:crystal.list
@@ -31,10 +31,11 @@ RUN sudo sh -c 'sudo dpkg -i packages-microsoft-prod.deb'
 RUN sudo sh -c 'rm packages-microsoft-prod.deb'
 
 # Setup D Lang
-ENV DLANG_VERSION=2.097.2
-RUN mkdir -p ~/dlang && wget https://dlang.org/install.sh -O ~/dlang/install.sh
-RUN bash ~/dlang/install.sh dmd-$DLANG_VERSION
-ENV PATH=$PATH:~/dlang/dmd-$DLANG_VERSION/linux/bin64/
+RUN sudo sh -c 'mkdir -p ~/dlang && wget https://dlang.org/install.sh -O ~/dlang/install.sh'
+RUN sudo sh -c 'bash ~/dlang/install.sh'
+## From Docs not needed though
+# RUN sudo sh -c 'source ~/dlang/dmd-2.097.2/activate'
+ENV PATH=$PATH:/root/dlang/dmd-2.097.2/linux/bin64
 
 # Setup Go
 RUN sudo sh -c 'wget -c https://dl.google.com/go/go1.14.2.linux-amd64.tar.gz -O - | sudo tar -xz -C /usr/local'
@@ -55,35 +56,36 @@ ENV PATH=$PATH:/usr/local/kotlinc/bin
 # Setup Matlab
 # ?????? This is a licensed language???
 
-# Setup Emojicode
-RUN mkdir -p ~/emojicode && wget -c https://github.com/emojicode/emojicode/releases/download/v1.0-beta.2/Emojicode-1.0-beta.2-Linux-x86_64.tar.gz -O ~/emojicode/emojicode.tar.gz && \
-    tar -xzf ~/emojicode/emojicode.tar.gz -C ~/emojicode --strip-components=1
-ENV PATH=$PATH:~/emojicode
+# Setup Emojicode (in progress)
+RUN sudo sh -c 'wget -c https://github.com/emojicode/emojicode/releases/download/v1.0-beta.2/Emojicode-1.0-beta.2-Linux-x86_64.tar.gz -O /usr/local/Emojicode-1.0-beta.2-Linux-x86_64.tar.gz'
+RUN sudo tar -xvzf /usr/local/Emojicode-1.0-beta.2-Linux-x86_64.tar.gz
+# && cd ~/emojicode/ && echo && ./install.sh'
+ENV PATH=$PATH:/usr/local/Emojicode-1.0-beta.2-Linux-x86_64
 
-# Setup Factor
-RUN mkdir -p ~/factor && wget https://downloads.factorcode.org/releases/0.98/factor-linux-x86-64-0.98.tar.gz -O ~/factor/factor.tar.gz && tar -xzf ~/factor/factor.tar.gz -C ~/factor --strip-components=1
-ENV PATH=$PATH:~/factor/factor
+# Setup Factor (in progress)
+RUN mkdir -p ~/factor && wget https://downloads.factorcode.org/releases/0.98/factor-linux-x86-64-0.98.tar.gz -O ~/factor/factor.tar.gz
+RUN tar -xzf /root/factor/factor.tar.gz
+# && rm ~/factor/factor.tar.gz
+ENV PATH=$PATH:/root/factor/factor
 
 # Setup R
 RUN sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys E298A3A825C0D65DFD57CBB651716619E084DAB9
 RUN sudo add-apt-repository 'deb https://cloud.r-project.org/bin/linux/ubuntu focal-cran40/'
 
-# Setup Racket and Scheme
-# To run scheme files, use `racket -f <file.ss>`
-RUN sudo apt-key adv --keyserver keyserver.ubuntu.com --recv-keys D9D33FCD84D82C17288BA03B3C9A6980F827E01E
-RUN sudo add-apt-repository 'deb http://ppa.launchpad.net/plt/racket/ubuntu focal main'
+# Setup Racket
+## Use: https://ubunlog.com/en/racket-install-ubuntu-programming-language
+
+# Setup Scheme
+## Use: https://github.com/ashinn/chibi-scheme
 
 # Setup Scratch
 ## using 1.x right now.... in future checkout snap or adobe air?
 
 # Setup Swift
-RUN mkdir -p ~/swift && wget https://swift.org/builds/swift-5.5-release/ubuntu2004/swift-5.5-RELEASE/swift-5.5-RELEASE-ubuntu20.04.tar.gz -O ~/swift/swift.tar.gz && \
-    tar -xzf ~/swift/swift.tar.gz -C ~/swift --strip-components=1
-ENV PATH=$PATH:~/swift/usr/bin
+## ?
 
 # Setup viml
-# To run vim script commands use `/usr/bin/vim -c ":source %" <path_to_file>`
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get -y install --no-install-recommends vim
+## ?
 
 # Setup whitespace
 ## ?
@@ -92,15 +94,13 @@ RUN export DEBIAN_FRONTEND=noninteractive && apt-get -y install --no-install-rec
 ## https://github.com/elm/compiler/blob/master/installers/linux/README.md
 
 # Setup V
-RUN mkdir -p ~/vlang && wget https://github.com/vlang/v/releases/download/weekly.2021.44/v_linux.zip -O ~/vlang/vlang.zip && \
-    unzip ~/vlang/vlang.zip -d ~/vlang 
-ENV PATH=$PATH:~/vlang/v
+## https://github.com/vlang/v/blob/master/doc/docs.md
+
 
 # Install the packages that needed extra help
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base racket
+    && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base
 
-RUN pip install wheel matplotlib numpy coconut scons
+RUN pip install wheel matplotlib numpy coconut
 
 RUN sudo sh -c 'npm install -g typescript'
-
