--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -86,7 +86,8 @@ ENV PATH=$PATH:~/swift/usr/bin
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get -y install --no-install-recommends vim
 
 # Setup whitespace
-## ?
+RUN mkdir -p ~/whitespace && git clone https://github.com/wspace/whitespace-haskell ~/whitespace && cd ~/whitespace && make -B
+ENV PATH=$PATH:~/whitespace
 
 # Setup Elm
 RUN mkdir -p ~/elm && curl -L -o ~/elm/elm.gz https://github.com/elm/compiler/releases/download/0.19.1/binary-for-linux-64-bit.gz && \
@@ -98,11 +99,11 @@ RUN mkdir -p ~/vlang && wget https://github.com/vlang/v/releases/download/weekly
     unzip ~/vlang/vlang.zip -d ~/vlang 
 ENV PATH=$PATH:~/vlang/v
 
-# Install the packages that needed extra help
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base racket
+# # Install the packages that needed extra help
+# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+#     && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base racket
 
-RUN pip install wheel matplotlib numpy coconut scons
+# RUN pip install wheel matplotlib numpy coconut scons
 
-RUN sudo sh -c 'npm install -g typescript'
+# RUN sudo sh -c 'npm install -g typescript'
 
