Fix-devcontainer-commented-out-steps (#925)
* Add devcontainer setup for VimL/Vim script

* Add devcontainer setup for whitespace

* fix commented out dockerfile steps

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -99,11 +99,12 @@ RUN mkdir -p ~/vlang && wget https://github.com/vlang/v/releases/download/weekly
     unzip ~/vlang/vlang.zip -d ~/vlang 
 ENV PATH=$PATH:~/vlang/v
 
-# # Install the packages that needed extra help
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base racket
+# Install the packages that needed extra help
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && apt-get -y install --no-install-recommends crystal dart nim powershell scala dotnet-sdk-5.0 r-base racket
 
-# RUN pip install wheel matplotlib numpy coconut scons
 
-# RUN sudo sh -c 'npm install -g typescript'
+RUN pip install wheel matplotlib numpy coconut scons
+
+RUN sudo sh -c 'npm install -g typescript'
 
