--- a/contents/cooley_tukey/code/asm-x64/SConscript
+++ b/contents/cooley_tukey/code/asm-x64/SConscript
@@ -3,4 +3,4 @@ from pathlib import Path
 
 dirname = Path.cwd().parents[1].stem
 
-env.X64(f'#/build/asm-x64/{dirname}', Glob('*.s'), LIBS=['m'])
+env.X64(f'#/build/asm-x64/{dirname}', Glob('*.s'), LIBS=['m'], parse_flags="-Wl,-no-pie")
