Add Cargo.toml files for code requiring libraries

--- a/contents/cooley_tukey/code/rust/Cargo.toml
+++ b/contents/cooley_tukey/code/rust/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "barnsley"
+name = "rust"
 version = "0.1.0"
 edition = "2018"
 
@@ -7,7 +7,8 @@ edition = "2018"
 
 [dependencies]
 rand = "0.8.4"
+rustfft = "6.0.1"
 
 [[bin]]
-path = "./barnsley.rs"
+path = "./fft.rs"
 name = "main"
