--- a/contents/split-operator_method/code/rust/Cargo.toml
+++ b/contents/split-operator_method/code/rust/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "barnsley"
+name = "splitop"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
+num = "0.4.0"
+rustfft = "5.1.1"
 
 [[bin]]
-path = "./barnsley.rs"
+path = "./split_op.rs"
 name = "main"
