--- a/contents/cooley_tukey/code/rust/Cargo.toml
+++ b/contents/cooley_tukey/code/rust/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "barnsley"
+name = "rust"
 version = "0.1.0"
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rand = "0.8.4"
+rand = "0.7.3"
+rustfft = "4.1.0"
 
 [[bin]]
-path = "./barnsley.rs"
+path = "./fft.rs"
 name = "main"
