--- a/.github/workflows/publish_container.yml
+++ b/.github/workflows/publish_container.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    if: github.repository == 'algorithm-archivists/algorithm-archive'
     steps:
     - uses: actions/checkout@master
     - name: Publish to Registry
