--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,9 @@ on: pull_request
 jobs:
   build:
     runs-on: ubuntu-latest
-    container: ghcr.io/algorithm-archivists/aaa-langs:latest
+    container:
+      options: --entrypoint /bin/bash
+      image: ghcr.io/algorithm-archivists/aaa-langs:latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -15,5 +17,10 @@ jobs:
         run: |
           npm install
           npx honkit build
-      - name: Scons
+  
+      - name: check user
+        run: whoami
+      - name: check cargo
+        run: which cargo
+      - name: Run Scons
         run: scons
