--- a/.github/workflows/publish_container.yml
+++ b/.github/workflows/publish_container.yml
@@ -7,9 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@main
+    - uses: actions/checkout@master
     - name: Publish to Registry
-      uses: elgohr/Publish-Docker-Github-Action@main
+      uses: elgohr/Publish-Docker-Github-Action@master
       with:
         name: algorithm-archivists/aaa-langs
         username: ${{ github.actor }}
