--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,6 @@ jobs:
       - name: check user
         run: whoami
       - name: check cargo
-        run: sudo which cargo
+        run: which cargo
       - name: Run Scons
-        run: sudo scons
+        run: scons -kQ
