--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ jobs:
     container:
       options: --entrypoint /bin/bash
       image: ghcr.io/algorithm-archivists/aaa-langs:latest
+    defaults:
+      run:
+        shell: bash
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -18,8 +21,8 @@ jobs:
           npm install
           npx honkit build
   
-      - name: Initalize cargo?
-        run:  . "$HOME/.cargo/env"
+      #- name: Initalize cargo?
+      #  run:  . "$HOME/.cargo/env"
       
       - name: Run Scons
         run: scons -kQ
